cp4i/webgui-dpapd01-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webgui-dpapd01-route
  namespace: dp-apac
spec:
  to:
    kind: Service
    name: services-dpapd01 
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: ''
    certificate: ''
    key: ''
    caCertificate: ''
    destinationCACertificate: ''
  port:
    targetPort: webgui-dpapd01
